feat(client): client can send messages to a server

--- a/packages/client/src/public/index.html
+++ b/packages/client/src/public/index.html
@@ -1,15 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Chat</title>
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Chat</title>
-</head>
-
-<body>
-  <!-- your content here... -->
-  <div id="root"></div>
-</body>
-
+  <body>
+    <!-- your content here... -->
+    <div id="root"></div>
+  </body>
 </html>
